add event listener that displays values (only nums and operators)

--- a/index.html
+++ b/index.html
@@ -5,39 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project: Calculator</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="calculator">
-      <div class="display">17283</div>
-      <div class="buttons">
-        <section class="row-1">
-          <button class="clear">ac</button>
-          <button class="posneg">⁺/₋</button>
-          <button class="power operator">xⁿ</button>
+    <div class="calculator div">
+      <div class="display"></div>
+      <div class="buttons div">
+        <section class="row div">
+          <button class="clear key">ac</button>
+          <button class="percent key">%</button>
+          <button class="power key">x<sup>ⁱ</sup></button>
           <button class="divide operator">÷</button>
         </section>
-        <section class="row-2">
-          <button class="num-7">7</button>
-          <button class="num-8">8</button>
-          <button class="num-9">9</button>
+        <section class="row div">
+          <button class="7">7</button>
+          <button class="8">8</button>
+          <button class="9">9</button>
           <button class="multiply operator">×</button>
         </section>
-        <section class="row-3">
-          <button class="num-4">4</button>
-          <button class="num-5">5</button>
-          <button class="num-6">6</button>
+        <section class="row div">
+          <button class="4">4</button>
+          <button class="5">5</button>
+          <button class="6">6</button>
           <button class="subtract operator">–</button>
         </section>
-        <section class="row-4">
-          <button class="num-1">1</button>
-          <button class="num-2">2</button>
-          <button class="num-3">3</button>
+        <section class="row div">
+          <button class="1">1</button>
+          <button class="2">2</button>
+          <button class="3">3</button>
           <button class="add operator">+</button>
         </section>
-        <section class="row-5">
-          <button class="num-0">0</button>
-          <button class="decimal operator">·</button>
-          <button class="equals">=</button>
+        <section class="row div">
+          <button class="0">0</button>
+          <button class="decimal">.</button>
+          <button class="equals key">=</button>
         </section>
       </div>
     </div>
