--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="buttons div">
         <section class="row div">
           <button class="clear key">ac</button>
-          <button class="percent key">%</button>
+          <button class="percent operator">%</button>
           <button class="power key">x<sup>ⁱ</sup></button>
           <button class="divide operator">÷</button>
         </section>
