make power operation work

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section class="row div">
           <button class="clear key">ac</button>
           <button class="percent operator">%</button>
-          <button class="power key">x<sup>ⁱ</sup></button>
+          <button class="power operator">∧</button>
           <button class="divide operator">÷</button>
         </section>
         <section class="row div">
