--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   </head>
   <body>
     <div class="calculator div">
-      <div class="display"></div>
+      <div class="display-screen">
+        <div class="operation"></div>
+        <div class="display"></div>
+      </div>
       <div class="buttons div">
         <section class="row div">
           <button class="clear key">ac</button>
