be able to delete a character

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       <div class="buttons div">
         <section class="row div">
           <button class="clear key">ac</button>
-          <button class="percent operator">%</button>
+          <button class="backspace key">
+            <img src="backspace.png" alt="backspace" />
+          </button>
           <button class="power operator">∧</button>
           <button class="divide operator">÷</button>
         </section>
@@ -44,6 +46,7 @@
         <section class="row div">
           <button class="0">0</button>
           <button class="decimal">.</button>
+          <button class="percent operator">%</button>
           <button class="equals key">=</button>
         </section>
       </div>
