--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Project: Calculator</title>
     <link rel="stylesheet" href="style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
     />
   </head>
